--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -9,8 +9,7 @@
     </head>
     <body>
            <div class="page-header">
-        <h1><a href="/">Wizdem's Blog</a></h1>
-        <h1><a href="/admin/">Admin login</a></h1>
+        <h1><a href="/">Wizdem's Blog</a> <a href="/admin/">Admin login</a></h1>
     </div>
     <div class="content container">
         <div class="row">
