--- a/blog/static/css/blog.css
+++ b/blog/static/css/blog.css
@@ -5,18 +5,19 @@ body {
     padding-left: 15px;
 }
 .page-header {
-    background-color: #ffff00;
+    background-color: #000055;
     margin-top: 0;
     padding: 20px 20px 20px 40px;
 }
 
 .page-header h1, .page-header h1 a, .page-header h1 a:visited, .page-header h1 a:active {
-    color: #ffffff;
+    color: #000000;
     font-size: 36pt;
     text-decoration: none;
 }
 
 .content {
+    background-color: #fff4f4;
     margin-left: 40px;
 }
 
