--- a/blog/static/css/blog.css
+++ b/blog/static/css/blog.css
@@ -2,22 +2,22 @@ h1 a {
     color: #0000FF;
 }
 body {
+    background-color: #fff4f4;
     padding-left: 15px;
 }
 .page-header {
-    background-color: #003355;
+    background-color: #006afa;
     margin-top: 0;
     padding: 20px 20px 20px 40px;
 }
 
 .page-header h1, .page-header h1 a, .page-header h1 a:visited, .page-header h1 a:active {
-    color: #000000;
+    color: #ffff00;
     font-size: 36pt;
     text-decoration: none;
 }
 
 .content {
-    background-color: #fff4f4;
     margin-left: 40px;
 }
 
