changes to colour scheme

--- a/blog/static/css/blog.css
+++ b/blog/static/css/blog.css
@@ -2,11 +2,11 @@ h1 a {
     color: #0000FF;
 }
 body {
-    background-color: #fff4f4;
+    background-color: #FAE1F1;
     padding-left: 15px;
 }
 .page-header {
-    background-color: #006afa;
+    background-color: #08509E;
     margin-top: 0;
     padding: 20px 20px 20px 40px;
 }
