--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -8,16 +8,23 @@
         <link rel="stylesheet" href="{% static 'css/blog.css' %}">
     </head>
     <body>
-           <div class="page-header">
-        <h1><a href="/">Wizdem's Blog</a>  <a href="/admin/">Admin login</a></h1>
-    </div>
-    <div class="content container">
-        <div class="row">
-            <div class="col-md-8">
-            {% block content %}
-            {% endblock %}
+        <div class="page-header">
+            <div class="row">
+                <div class="col-s-4">
+                    <img src="{% static 'images/W.jpg' %}">
+                </div>
+                <div class="col-s-8">
+                    <h1><a href="/">Wizdem's Blog</a>  <a href="/admin/">Admin login</a></h1>
+                </div>
             </div>
         </div>
-    </div>
+        <div class="content container">
+            <div class="row">
+                <div class="col-md-8">
+                {% block content %}
+                {% endblock %}
+                </div>
+            </div>
+        </div>
     </body>
 </html>
