--- a/blog/static/css/blog.css
+++ b/blog/static/css/blog.css
@@ -8,6 +8,11 @@ h1 a {
     padding: 20px 20px 20px 40px;
 }
 
+.page-header img {
+    display: inline-block;
+    height: 100%;
+}
+
 .page-header h1, .page-header h1 a, .page-header h1 a:visited, .page-header h1 a:active {
     color: #ffff00;
     font-size: 36pt;
@@ -25,21 +30,6 @@ h1, h2, h3, h4 {
 
 .date {
     color: #828282;
-}
-
-.save {
-    float: right;
-}
-
-.post-form textarea, .post-form input {
-    width: 100%;
-}
-
-.top-menu, .top-menu:hover, .top-menu:visited {
-    color: #ffffff;
-    float: right;
-    font-size: 26pt;
-    margin-right: 20px;
 }
 
 .post {
