--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -11,7 +11,8 @@
         <div class="page-header">
             <div class="row">
                 <div class="col-s-4">
-                    <img src="{% static 'images/W.jpg' %}">
+                    <!--<img src="{% static 'images/W.jpg' %}">-->
+                    <img src="../../static/images/W.jpg">
                 </div>
                 <div class="col-s-8">
                     <h1><a href="/">Wizdem's Blog</a>  <a href="/admin/">Admin login</a></h1>
