--- a/blog/static/css/blog.css
+++ b/blog/static/css/blog.css
@@ -8,9 +8,13 @@ h1 a {
     padding: 20px 20px 20px 40px;
 }
 
-.page-header img {
+body {
+    padding-left: 0;
+}
+
+img {
     display: inline-block;
-    height: 100%;
+    height: 15%;
 }
 
 .page-header h1, .page-header h1 a, .page-header h1 a:visited, .page-header h1 a:active {
