--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -10,11 +10,10 @@
     <body>
         <div class="page-header">
             <div class="row">
-                <div class="col-s-4">
-                    <!--<img src="{% static 'images/W.jpg' %}">-->
-                    <img src="../../static/images/W.jpg">
+                <div class="col-sm-4">
+                    <img src="{% static 'images/W.jpg' %}">
                 </div>
-                <div class="col-s-8">
+                <div class="col-sm-8">
                     <h1><a href="/">Wizdem's Blog</a>  <a href="/admin/">Admin login</a></h1>
                 </div>
             </div>
