--- a/blog/static/css/blog.css
+++ b/blog/static/css/blog.css
@@ -1,9 +1,9 @@
 h1 a {
-    color: #0000FF;
+    color: #370000;
 }
 
 .page-header {
-    background-color: #113B9C;
+    background-color: #00aaff;
     margin-top: 0;
     padding: 20px 20px 20px 40px;
 }
