--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -10,11 +10,14 @@
     <body>
         <div class="page-header">
             <div class="row">
-                <div class="col-sm-4">
+                <div class="col-sm-2">
                     <img src="{% static 'images/W.jpg' %}">
                 </div>
-                <div class="col-sm-8">
-                    <h1><a href="/">Wizdem's Blog</a>  <a href="/admin/">Admin login</a></h1>
+                <div class="col-sm-5">
+                    <h1><a href="/">Wizdem's Blog</a></h1> 
+                </div>
+                <div class="col-sm-5">
+                    <h1><a href="/admin/">Admin login</a></h1>
                 </div>
             </div>
         </div>
